# ChangeLog for catalyst
# Copyright 2002-2009 Gentoo Foundation; 2008-2009 Various authors (see AUTHORS)
# Distributed under the GPL v2

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py, modules/catalyst/target/generic_stage.py,
  modules/catalyst/util.py:
  Move ismount() and pathcompare() from catalyst.support to catalyst.util

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py:
  Remove unused function hexify()

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py, modules/catalyst/target/embedded.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/livecd_stage1.py,
  modules/catalyst/target/livecd_stage2.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/netboot2.py,
  modules/catalyst/target/snapshot.py, modules/catalyst/target/stage1.py,
  modules/catalyst/target/stage2.py, modules/catalyst/util.py:
  Move normpath() from catalyst.support to catalyst.util

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py, modules/catalyst/target/stage1.py,
  modules/catalyst/target/stage2.py, modules/catalyst/util.py:
  Move list_to_string() from catalyst.support to catalyst.util

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/output.py, modules/catalyst/support.py,
  modules/catalyst/target/generic_stage.py, modules/catalyst/target/grp.py,
  modules/catalyst/target/netboot.py, modules/catalyst/target/netboot2.py,
  modules/catalyst/target/tinderbox.py, modules/catalyst/util.py:
  Move list_bashify() from catalyst.support to catalyst.util

  11 Jan 2009; Andrew Gaffney <agaffney@gentoo.org>
  modules/catalyst/support.py, modules/catalyst/target/generic_stage.py,
  modules/catalyst/target/livecd_stage2.py, modules/catalyst/util.py:
  Replace catalyst.support.read_from_clst() with catalyst.util.readfile()
  and update references
