@@ -52,7 +52,7 @@ class livecd_stage2_target(generic_stage_target):
 			if os.path.isdir(self.settings["target_path"]):
 				cmd("rm -rf "+self.settings["target_path"],
 				"Could not remove existing directory: "+self.settings["target_path"],env=self.env)
-				touch(self.settings["autoresume_path"]+"setup_target_path")
+				catalyst.util.touch(self.settings["autoresume_path"]+"setup_target_path")
 			if not os.path.exists(self.settings["target_path"]):
 				os.makedirs(self.settings["target_path"])
 
@@ -122,7 +122,7 @@ class livecd_stage2_target(generic_stage_target):
 				myf.write(self.settings["source_path_hash"])
 				myf.close()
 			else:
-				touch(self.settings["autoresume_path"]+"unpack")
+				catalyst.util.touch(self.settings["autoresume_path"]+"unpack")
 
 	def set_action_sequence(self):
 		self.settings["action_sequence"]=["unpack","unpack_snapshot",\
